--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -20,14 +20,28 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@automapper/classes": "^8.8.1",
+    "@automapper/core": "^8.8.1",
+    "@automapper/nestjs": "^8.8.1",
+    "@golevelup/nestjs-rabbitmq": "^5.3.0",
+    "@intelika/swagger-theme": "^1.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.9",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
+    "@prisma/client": "^5.15.1",
+    "@types/argon2": "^0.15.0",
     "@types/node-jose": "^1.1.13",
+    "argon2": "^0.40.3",
+    "crypto": "^1.0.1",
+    "nestjs-prisma": "^0.23.0",
     "node-jose": "^2.2.0",
+    "prisma": "^5.15.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "shallow-equal-object": "^1.1.1"
+    "shallow-equal-object": "^1.1.1",
+    "simple-git": "^3.25.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
