--- a/package.json
+++ b/package.json
@@ -20,21 +20,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@automapper/classes": "^8.8.1",
-    "@automapper/core": "^8.8.1",
-    "@automapper/nestjs": "^8.8.1",
     "@golevelup/nestjs-rabbitmq": "^5.3.0",
     "@intelika/swagger-theme": "^1.0.4",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/cqrs": "^10.2.7",
     "@nestjs/microservices": "^10.3.9",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.15.1",
     "@types/argon2": "^0.15.0",
     "@types/node-jose": "^1.1.13",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "argon2": "^0.40.3",
     "crypto": "^1.0.1",
+    "ejs": "^3.1.10",
+    "in": "^0.19.0",
     "nestjs-prisma": "^0.23.0",
     "node-jose": "^2.2.0",
     "prisma": "^5.15.1",
