feat: some packages and libs are added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,7 @@
     "editor.formatOnSaveMode": "file",
     "typescript.preferences.importModuleSpecifier": "non-relative",
     "javascript.preferences.importModuleSpecifier": "non-relative",
+    "editor.wordWrap": "wordWrapColumn",
+     "editor.wordWrapColumn": 140,
     "jest.autoRun": "off",
 }
